--- a/iam_custom_with_default_api/api/appsettings.json
+++ b/iam_custom_with_default_api/api/appsettings.json
@@ -5,12 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0O2VAMH\\MSSQNEWSERVER;Database=aspnet-WebApplication12-54bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true;Persist Security Info=True;Encrypt=true;TrustServerCertificate=true;",
+    "WebApplication12ContextConnection": "Server=DESKTOP-0O2VAMH\\MSSQNEWSERVER;Database=WebApplication12;Trusted_Connection=True;MultipleActiveResultSets=true;Persist Security Info=True;Encrypt=true;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*",
   "JWT": {
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
-    "TokenValidityInMinutes": 10        ,
+    "TokenValidityInMinutes": 10,
     "RefreshTokenValidityInDays": 7
   }
 }
